WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272005
QuickLook sometimes shows broken images for image sources when loading web archives
https://bugs.webkit.org/show_bug.cgi?id=272005
Summary
QuickLook sometimes shows broken images for image sources when loading web ar...
Wenson Hsieh
Reported
2024-04-01 17:03:40 PDT
rdar://123918480
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-04-01 18:00:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26709
EWS
Comment 2
2024-04-02 11:49:01 PDT
Committed
276952@main
(408858f600d2): <
https://commits.webkit.org/276952@main
> Reviewed commits have been landed. Closing PR #26709 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug